Add executable uberjar build configuration